--- a/MyBodyShape.Android/MyBodyShape.Android.csproj
+++ b/MyBodyShape.Android/MyBodyShape.Android.csproj
@@ -69,6 +69,9 @@
     <Compile Include="Fragments\ResultsFragment.cs" />
     <Compile Include="Fragments\SecondPictureFragment.cs" />
     <Compile Include="Fragments\FirstPictureFragment.cs" />
+    <Compile Include="Helpers\BodyShapeWebClient.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Helpers\PathArea.cs" />
     <Compile Include="Helpers\ZoomableImageView.cs" />
     <Compile Include="Helpers\CircleArea.cs" />
