--- a/MyBodyShape.Android/Properties/AndroidManifest.xml
+++ b/MyBodyShape.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="MyBodyShape.Android" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
-	<application android:label="MyBodyShape" android:debuggable="true">
+	<application android:icon="@drawable/icon" android:theme="@style/CustomTheme" android:debuggable="true">
 		<provider android:name="android.support.v4.content.FileProvider" android:authorities="${applicationId}.provider" android:exported="false" android:grantUriPermissions="true">
 			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/provider_paths" />
 		</provider>
