--- a/MyBodyShape.Android/packages.config
+++ b/MyBodyShape.Android/packages.config
@@ -2,5 +2,15 @@
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
   <package id="SkiaSharp" version="1.55.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v4" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.3.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Annotations" version="25.3.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Compat" version="25.3.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Core.UI" version="25.3.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="25.3.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Fragment" version="25.3.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="25.3.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.v4" version="25.3.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="25.3.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="25.3.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Build.Download" version="0.4.3" targetFramework="monoandroid70" />
 </packages>
